src/log3.log
Room.cpp: In member function ‘std::string Room::getExitString()’:
Room.cpp:49:21: error: qualified-id in declaration before ‘(’ token
  Room* Room::getExit(string direction){
                     ^
Room.cpp:49:29: error: expected primary-expression before ‘direction’
  Room* Room::getExit(string direction){
                             ^
Room.cpp:53:2: error: expected ‘}’ at end of input
  }
  ^
In file included from /usr/include/c++/4.9/map:61:0,
                 from Room.h:7,
                 from Game.h:6,
                 from Room.cpp:4:
/usr/include/c++/4.9/bits/stl_map.h: In instantiation of ‘std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) [with _Key = std::basic_string<char>; _Tp = Room; _Compare = std::less<std::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::basic_string<char>, Room> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = Room; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = std::basic_string<char>]’:
Room.cpp:32:18:   required from here
/usr/include/c++/4.9/bits/stl_map.h:504:59: error: no matching function for call to ‘Room::Room()’
           __i = insert(__i, value_type(__k, mapped_type()));
                                                           ^
/usr/include/c++/4.9/bits/stl_map.h:504:59: note: candidates are:
Room.cpp:26:2: note: Room::Room(std::string)
  Room::Room(string description){
  ^
Room.cpp:26:2: note:   candidate expects 1 argument, 0 provided
In file included from Game.h:6:0,
                 from Room.cpp:4:
Room.h:15:7: note: Room::Room(const Room&)
 class Room
       ^
Room.h:15:7: note:   candidate expects 1 argument, 0 provided
